# abstraction-chronometry

./: .gitignore  README.md  analyze_olmo.py  pyproject.toml
paper/: main.tex  refs.bib
results/: causal_main.json  manifest.json  report.txt  sweep_2026.json  sweep_4177.json  sweep_5023.json  sweep_6180.json  sweep_8191.json  sweep_gum_2026.json  sweep_olmo.json  traj_2026.json
src/abstraction_chronometry/: __init__.py  analysis.py  causal.py  cli.py  config.py  criterion.py  data.py  depth.py  extract.py  hierarchy.py  manifest.py  nulls.py  probes.py  run.py  tables.py
tests/: test_criterion.py  test_depth_hierarchy.py  test_extract_parity.py  test_nulls.py
